# DirectShow-BaseClasses-MultiCompiler

./: .gitignore  CMakeLists.txt  README.md
baseclasses/: refclock.h  streams.h
